src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Access_Technology_Related_to_Role__c</fullName>
        <inlineHelpText>Select which role the access technology requirement applies to</inlineHelpText>
        <label>Access Technology - Related to Role</label>
        <picklist>
            <picklistValues>
                <fullName>RNIB &amp; CIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_Technology_Type__c</fullName>
        <inlineHelpText>Select the relevant Access Technology types</inlineHelpText>
        <label>Access Technology Type</label>
        <picklist>
            <controllingField>Access_Technology_Related_to_Role__c</controllingField>
            <picklistValues>
                <fullName>JAWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zoomtext Magnifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zoomtext Magnifier and Reader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 7 Access Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dragon Naturally Speaking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Print Keyboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Larger Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duxbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kurzweil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Easy Converter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azabat</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Active_Roles__c</fullName>
        <inlineHelpText>This shows the amount of active roles linked</inlineHelpText>
        <label>Active Roles</label>
        <summaryFilterItems>
            <field>Application__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Application__c.Applicant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Address_Line_4__c</fullName>
        <description>Placeholder field - not intended to hold data but required to create a column in the export report to Ascent</description>
        <label>Address Line 4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(MONTH(TODAY())&gt;MONTH(Date_of_birth__c),YEAR(TODAY())-YEAR(Date_of_birth__c),IF(AND(MONTH(TODAY())=MONTH(Date_of_birth__c),DAY(TODAY())&gt;=DAY(Date_of_birth__c)),YEAR(TODAY())-YEAR(Date_of_birth__c),(YEAR(TODAY())-YEAR(Date_of_birth__c))-1))</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Areas_of_Interest__c</fullName>
        <inlineHelpText>Please select the areas of interest to you.  Note: updating this field will also update your interests in your profile</inlineHelpText>
        <label>Areas of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice Info and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Befriending and Buddying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns and Lobbying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers and Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment and Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing, PR &amp; Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practical Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaching, Training and Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trusteeship and Committee work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Work</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Areas_of_Interest_del__c</fullName>
        <label>Areas of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice, Information and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General helping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Befriending &amp; Buddying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing, PR &amp; Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigning &amp; Lobbying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practical Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource centre/shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers and Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaching, Training &amp; Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee/Group Volunteering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trusteeship &amp; Committee Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment/Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under 16 Volunteering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday Night</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Available_for_other_roles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for other roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <inlineHelpText>This confirms that the information you have given is correct</inlineHelpText>
        <label>Confirmation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Account__c</fullName>
        <label>Corporate Account</label>
        <referenceTo>Corporate_Account__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_Signatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please use this checkbox to select this contact as a Counter Signatory</inlineHelpText>
        <label>Counter Signatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criminal_Convictions__c</fullName>
        <inlineHelpText>Unspent Criminal Convictions</inlineHelpText>
        <label>Criminal Convictions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Protection__c</fullName>
        <inlineHelpText>We will use your personal details in relation to your application and volunteering role.  Please indicate if you are happy to receive occasional information on other RNIB Group Volunteering opportunities</inlineHelpText>
        <label>Data Protection</label>
        <picklist>
            <picklistValues>
                <fullName>No Response</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_ID_Card_Sent__c</fullName>
        <inlineHelpText>Enter the date when the ID card was sent to the Volunteer</inlineHelpText>
        <label>Date ID Card Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Retired__c</fullName>
        <label>Date Retired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Suspended__c</fullName>
        <label>Date Suspended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Suspension_Ended__c</fullName>
        <label>Date Suspension Ended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Photo__c</fullName>
        <inlineHelpText>Enter the date when the last photograph was taken of the Volunteer</inlineHelpText>
        <label>Date of Last Photo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <description>Enter the Date of Birth in this format &quot;DD/MM/YYYY&quot;</description>
        <inlineHelpText>Enter the Date of Birth in this format &quot;DD/MM/YYYY&quot;</inlineHelpText>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Daytime_Phone__c</fullName>
        <label>Daytime Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Disability_Notes__c</fullName>
        <inlineHelpText>If you wish to give further comments about your disability, please enter it here</inlineHelpText>
        <label>Disability Further Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <label>Disability</label>
        <picklist>
            <picklistValues>
                <fullName>Prefer not to say</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning disabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing Loss (with speech)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing Loss (without speech)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia/other cognitive impairments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dyslexia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sight Loss</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driving_License_Checked__c</fullName>
        <label>Driving License and Insurance Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Driving_License_Next_Check__c</fullName>
        <formula>IF(ISBLANK( Driving_License_Checked__c ),
Driving_License_Checked__c,
IF(MONTH(Driving_License_Checked__c)=2 &amp;&amp; DAY(Driving_License_Checked__c)=29,
DATE(YEAR(Driving_License_Checked__c)+1, 2, 28),
DATE(YEAR(Driving_License_Checked__c)+1, MONTH(Driving_License_Checked__c), DAY(Driving_License_Checked__c)) - 1
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Driving License and Insurance Next Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Mobile__c</fullName>
        <label>Emergency Contact Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <label>Emergency Contact Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnicity_list__c</fullName>
        <label>Ethnicity list</label>
        <picklist>
            <picklistValues>
                <fullName>Prefer not to say</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White (British)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White (Irish)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White (other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed (White and Black Caribbean)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed (White and Black African)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed (White and Asian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed (other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian British (Indian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian British (Pakistani)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Asian British (Bangladeshi)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian (other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or Black British (Black Caribbean)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or Black British (Black African)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black (other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other ethnic group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Disclosure__c</fullName>
        <label>External Disclosure</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer Not To Say</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Induction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked the volunteer has completed a group (tele) induction</inlineHelpText>
        <label>Group Induction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holiday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked the person is on holiday or otherwise unavailable</inlineHelpText>
        <label>Unavailable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_RNIB__c</fullName>
        <label>How did you hear about RNIB</label>
        <picklist>
            <picklistValues>
                <fullName>Advert or news article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and social care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Centres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Blind Societies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RNIB &amp; Action Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sight loss sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Centres</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Card_Expiry_Date__c</fullName>
        <label>ID Card Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_Card_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Card Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <label>ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Other__c</fullName>
        <label>If Other Format</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_Contact__c</fullName>
        <label>Technology required, If Yes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InterviewRecordLookup__c</fullName>
        <description>This field is used as a reference to Interview object</description>
        <inlineHelpText>This field is used as a reference to Interview object</inlineHelpText>
        <label>Interview Record Lookup</label>
        <referenceTo>Interview__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Access_Technology_Required__c</fullName>
        <label>Is Access Technology Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Contact_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Contact ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Located</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Located Yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Exhausted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem With Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer Not to Say</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NVIS_Account_No__c</fullName>
        <label>NVIS Account No</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>TEXT(Salutation) + &quot; &quot; +  FirstName + &quot; &quot; + &quot; &quot; + LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Accepted_Reference_Checks__c</fullName>
        <inlineHelpText>This shows the total number of accepted reference checks the volunteer has had for all applications they have made</inlineHelpText>
        <label>Number of Accepted Reference Checks</label>
        <summarizedField>Application__c.Accepted_Reference_Checks__c</summarizedField>
        <summaryForeignKey>Application__c.Applicant__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>On_Update_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the volunteer signed up to the update service?</inlineHelpText>
        <label>On Update Service?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Waitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Waitlist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Region__c</fullName>
        <label>Other Region</label>
        <picklist>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East of England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Over_18__c</fullName>
        <formula>IF( Age__c  &gt;= 18, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 10, 10),&quot;&quot;)</formula>
        <label>Over 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <formula>LEFT( MailingPostalCode , FIND(&quot; &quot;, MailingPostalCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PostCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_communications_channel__c</fullName>
        <inlineHelpText>Enter the preferred method by which you would like to receive communications from RNIB here</inlineHelpText>
        <label>Preferred Communications Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Phone call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>